--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                 </div>
                 </div>
                 <div class="videos">
-                    <video data-src="./images/vid-1.mp4" autoplay loop muted></video>
-                    <video data-src="./images/vid-3.mp4" autoplay loop muted></video>
-                    <video data-src="./images/vid-5.mp4" autoplay loop muted></video>
+                    <video src="./images/vid-1.mp4" autoplay loop muted></video>
+                    <video src="./images/vid-3.mp4" autoplay loop muted></video>
+                    <video src="./images/vid-5.mp4" autoplay loop muted></video>
                     
                 </div>
         </section>
