added all filles

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
             </div>
             
         </div>
-        <p class="created">Thank`s <span>Osama Elzero</span> all right reserved</p>
+        <p class="created">CREATED BY  <span>Ahmed Hassob</span> all right reserved</p>
     </section>
 
     <!-- end footer  -->
